tests/baselines/reference/clodulesDerivedClasses.errors.txt
tests/cases/compiler/clodulesDerivedClasses.ts(9,7): error TS2417: Class static side '类为 Path' incorrectly extends base class static side '类为 Shape'.
  Types of property 'Utils' are incompatible.
    Type '类为 Path.Utils' is not assignable to type '类为 Shape.Utils'.
      Property 'convert' is missing in type '类为 Utils'.


==== tests/cases/compiler/clodulesDerivedClasses.ts (1 errors) ====
    class Shape {
        id: number;
    }
    
    module Shape.Utils {
        export function convert(): Shape { return null;}
    }
    
    class Path extends Shape {
          ~~~~
!!! error TS2417: Class static side '类为 Path' incorrectly extends base class static side '类为 Shape'.
!!! error TS2417:   Types of property 'Utils' are incompatible.
!!! error TS2417:     Type '类为 Path.Utils' is not assignable to type '类为 Shape.Utils'.
!!! error TS2417:       Property 'convert' is missing in type '类为 Utils'.
        name: string;
    
    }
    
    module Path.Utils {
        export function convert2(): Path {
            return null;
        }
    }
    
    
    
    